Fixed font spacing (again lol) and fixed plus icon becuase I accidentally broke it.

--- a/client/styles/searchResults.css
+++ b/client/styles/searchResults.css
@@ -219,6 +219,7 @@ form{
 	margin-bottom: 25px;
 	overflow: hidden;
 	border-radius: 30px;
+	letter-spacing: 0.2em;
 }
 .name{
 	font-weight: bold;
